# unirate-api-rust

./: Cargo.toml  README.md
examples/: basic.rs
src/: client.rs  endpoints.rs  error.rs  lib.rs  models.rs
tests/: live.rs  mock.rs
